--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Kotlin Application 4A</string>
+    <string name="app_name">MVVMDatas</string>
+
+    <string name="retry">Retry</string>
+    <string name="data_error">An error occurred while loading the datas</string>
 </resources>
